--- a/UAS RAMA.html
+++ b/UAS RAMA.html
@@ -148,7 +148,7 @@
               <a class="nav-link active" href="produk.html">Produk</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Pesan</a>
+              <a class="nav-link active" href="testimoni.html">Testimoni</a>
             </li>
           </ul>
         </div>
